# tamil-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: tamil_female_vits.json  tamil_female_vits_small.json
docs/: DATASET_LICENSE.md  RUNBOOK_M1_STUDIO.md  mlx.md  model_card.md
rust/: Cargo.toml  README.md
rust/examples/: normalize_check.rs  synthesize.rs
rust/src/: lib.rs  mlx_ns_tts.rs  normalize.rs  phonemize.rs
scripts/: 01_prepare_data.sh  02_train.sh  03_export.sh
tamiltts/: __init__.py  export_onnx.py  phonemize.py  train.py
tamiltts/data/: prepare.py
tamiltts/mlx/: infer_ns.py  normalize.py  onnx_infer_ns.py
videos/intro/: build_script.py  tsconfig.json
videos/intro/src/: Intro.tsx  Root.tsx  script.json
