[project]
name = "tamil-tts"
version = "0.1.0"
description = "Small, fast, CPU-friendly Tamil text-to-speech (VITS -> ONNX), trained on the IndicTTS Tamil corpus."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Ashwanth Kumar", email = "ashwanth.kumar@gmail.com" }]
keywords = ["tts", "tamil", "vits", "onnx", "speech-synthesis"]

# Lightweight runtime deps: enough to RUN inference from the ONNX model.
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Heavy deps needed only for data prep + TRAINING (use the M1 Studio for this).
train = [
    "coqui-tts>=0.25.1",
    "torch>=2.2",
    "datasets>=2.18",
    "librosa>=0.10",
    "tqdm>=4.66",
    "pandas>=2.0",
]

[project.scripts]
tamil-tts = "tamiltts.sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tamiltts"]
